# lmms-eval

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_parse.py
.github/: issue_template.md  pull_request_template.md
.github/workflows/: lint.yml
docs/: README.md  commands.md  current_tasks.md  lmms-eval-0.3.md  model_guide.md  run_examples.md  task_guide.md
lmms_eval/: __main__.py  evaluator.py  evaluator_utils.py  logging_utils.py  utils.py
lmms_eval/api/: filter.py  group.py  instance.py  metrics.py  model.py  registry.py  samplers.py  task.py
lmms_eval/caching/: cache.py
lmms_eval/filters/: __init__.py  decontamination.py  extraction.py  selection.py  transformation.py
lmms_eval/loggers/: evaluation_tracker.py  utils.py  wandb_logger.py
lmms_eval/models/: __init__.py  aria.py  batch_gpt4.py  cambrian.py  claude.py  cogvlm2.py  from_log.py  fuyu.py  gemini_api.py  gpt4v.py  idefics2.py  instructblip.py  internvideo2.py  internvl.py  internvl2.py  llama_vision.py  llava.py  llava_hf.py  llava_onevision.py  llava_vid.py  mantis.py  minicpm_v.py  minimonkey.py  oryx.py  phi3v.py  qwen2_vl.py  qwen_vl.py  tinyllava.py  videochat2.py  vila.py  xcomposer2_4KHD.py  xcomposer2d5.py
lmms_eval/tasks/: __init__.py
lmms_eval/tasks/_task_utils/: vqa_eval_metric.py
lmms_eval/tasks/ai2d/: ai2d.yaml  ai2d_lite.yaml  ai2d_no_mask.yaml  upload_ai2d.py  utils.py
lmms_eval/tasks/arc/: README.md
lmms_eval/tasks/chartqa/: chartqa.yaml  chartqa_lite.yaml  upload_chartqa.py  utils.py
lmms_eval/tasks/cmmmu/: _cmmmu.yaml  _default_template_cmmmu_yaml  cmmmu_test.yaml  cmmmu_val.yaml  utils.py
lmms_eval/tasks/coco_cap/: coco2014_cap.yaml  coco2014_cap_test.yaml  coco2014_cap_val.yaml  coco2017_cap.yaml  coco2017_cap_test.yaml  coco2017_cap_val.yaml  coco2017_cap_val_lite.yaml  coco_cap.yaml  utils.py
lmms_eval/tasks/conbench/: conbench.yaml  utils.py
lmms_eval/tasks/detailcaps/: _default_template_detailcaps_yaml  detailcaps.yaml  utils.py
lmms_eval/tasks/docvqa/: docvqa.yaml  docvqa_val_lite.yaml  utils.py
lmms_eval/tasks/ferret/: ferret.yaml  rule.json  utils.py
lmms_eval/tasks/flickr30k/: flickr30k.yaml  flickr30k_test.yaml  flickr30k_test_lite.yaml  utils.py
lmms_eval/tasks/gpqa/: README.md
lmms_eval/tasks/gqa/: gqa.yaml  gqa_lite.yaml  utils.py
lmms_eval/tasks/gqa_ru/: gqa_ru.yaml  utils.py
lmms_eval/tasks/hallusion_bench/: evaluate_hb.py  utils.py
lmms_eval/tasks/iconqa/: _default_template_docvqa_yaml  iconqa.yaml  iconqa_test.yaml  iconqa_val.yaml
lmms_eval/tasks/ii_bench/: ii_bench.yaml  utils.py
lmms_eval/tasks/infovqa/: _default_template_infovqa_yaml  infovqa.yaml  infovqa_test.yaml  infovqa_val.yaml  infovqa_val_lite.yaml
lmms_eval/tasks/internal_eval/: d170_cn.yaml  d170_cn_utils.py  d170_en.yaml  d170_en_utils.py  dc100_en.yaml  dc100_en_utils.py  dc200_cn.yaml  dc200_cn_utils.py  internal_eval.yaml
lmms_eval/tasks/jmmmu/: jmmmu.yaml  jmmmu_accounting.yaml  jmmmu_agriculture.yaml  jmmmu_architecture_and_engineering.yaml  jmmmu_basic_medical_science.yaml  jmmmu_biology.yaml  jmmmu_chemistry.yaml  jmmmu_clinical_medicine.yaml  jmmmu_computer_science.yaml  jmmmu_design.yaml  jmmmu_diagnostics_and_laboratory_medicine.yaml  jmmmu_economics.yaml  jmmmu_electronics.yaml  jmmmu_energy_and_power.yaml  jmmmu_finance.yaml  jmmmu_japanese_art.yaml  jmmmu_japanese_heritage.yaml  jmmmu_japanese_history.yaml  jmmmu_manage.yaml  jmmmu_marketing.yaml  jmmmu_materials.yaml  jmmmu_math.yaml  jmmmu_mechanical_engineering.yaml  jmmmu_music.yaml  jmmmu_pharmacy.yaml  jmmmu_physics.yaml  jmmmu_psychology.yaml  jmmmu_public_health.yaml  jmmmu_world_history.yaml  utils.py
lmms_eval/tasks/live_bench/: live_bench.yaml  utils.py  utils_v2.py
lmms_eval/tasks/llava-bench-coco/: llava-bench-coco.yaml  utils.py
lmms_eval/tasks/llava-in-the-wild/: utils.py
lmms_eval/tasks/llava_interleave_bench/: _default_template_interleave_yaml  interleave_bench.yaml  utils.py
lmms_eval/tasks/llava_wilder/: _default_template_wilder_yaml  llava_wilder_small.yaml  utils.py
lmms_eval/tasks/mathverse/: mathverse.yaml  mathverse_evals.py  mathverse_testmini.yaml  mathverse_testmini_text.yaml  mathverse_testmini_text_dominant.yaml  mathverse_testmini_text_lite.yaml  mathverse_testmini_text_only.yaml  mathverse_testmini_vision.yaml  mathverse_testmini_vision_dominant.yaml  mathverse_testmini_vision_intensive.yaml  mathverse_testmini_vision_only.yaml  utils.py
lmms_eval/tasks/mathvista/: mathvista.yaml  mathvista_evals.py  mathvista_test.yaml  mathvista_testmini.yaml  mathvista_testmini_cot.yaml  mathvista_testmini_format.yaml  mathvista_testmini_solution.yaml  utils.py
lmms_eval/tasks/mia_bench/: utils.py
lmms_eval/tasks/mirb/: mirb.yaml  utils.py
lmms_eval/tasks/mix_evals/: README.md
lmms_eval/tasks/mmbench/: cc_utils.py  cn_utils.py  en_utils.py  mmbench.yaml  mmbench_cc.yaml  mmbench_cn.yaml  mmbench_cn_dev_lite.yaml  mmbench_en_dev.yaml  mmbench_en_dev_lite.yaml  mmbench_evals.py  mmbench_ru_dev.yaml  ru_utils.py
lmms_eval/tasks/mme/: mme.yaml  utils.py
lmms_eval/tasks/mme_realworld/: mme_realworld.yaml  mme_realworld_cn.yaml  mme_realworld_lite.yaml  utils.py
lmms_eval/tasks/mmmu/: mmmu.yaml  mmmu_group_img.yaml  mmmu_group_img_test.yaml  mmmu_group_img_val.yaml  mmmu_test.yaml  mmmu_val.yaml  utils.py  utils_group_img.py
lmms_eval/tasks/mmmu_pro/: mmmu_pro.yaml  mmmu_pro_composite.yaml  mmmu_pro_composite_cot.yaml  mmmu_pro_cot.yaml  mmmu_pro_standard_cot.yaml  mmmu_pro_vision.yaml  mmmu_pro_vision_cot.yaml  utils.py
lmms_eval/tasks/mmstar/: mmstar.yaml  utils.py
lmms_eval/tasks/mmt/: _default_template_yaml  mmt_mi.yaml  mmt_mi_test.yaml  mmt_mi_val.yaml  utils.py
lmms_eval/tasks/mmupd/: mmaad_base.yaml  mmaad_instruction.yaml  mmaad_option.yaml  mmiasd_base.yaml  (+11 more)
miscs/: example_eval.yaml  llava_repr_requirements.txt  repr_scripts.sh  repr_torch_envs.txt  tinyllava_repr_requirements.txt  tinyllava_repr_scripts.sh
tools/: regression.py
tools/lite/: shrink.py
tools/live_bench/: create_dataset.py  refine_all_results.py
(+154 files in other folders)
