[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[tomli]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lmms_eval"
version = "0.3.0"
authors = [
    { name = "LMMMs-Lab Evaluation Team", email = "lmms-lab@outlook.com" },
]
description = "A framework for evaluating large multi-modality language models"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "accelerate>=0.29.1",
    "datasets>=3,<4",
    "evaluate>=0,<1",
    "httpx>=0,<1",
    "numpy>=2,<3",
    "peft>=0,<1",
    "pytablewriter>=1,<2",
    "sacrebleu>=2,<3",
    "scikit-learn>=1,<2",
    "sqlitedict>=2,<3",
    "torch>=2.1,<3",
    "torchvision>=0,<1",
    "einops>=0,<1",
    "openai>=1,<2",
    "hf_transfer>=0,<1",
    "nltk>=3,<4",
    "sentencepiece>=0,<1",
    "pycocoevalcap>=1,<2",
    "tqdm-multiprocess>=0,<1",
    "transformers>=4,<5",
    "transformers-stream-generator>=0,<1",
    "loguru>=0,<1",
    "tenacity>=9,<10",
    "wandb>=0,<1",
    "sentence_transformers>=3,<4",
]

[project.optional-dependencies]
metrics = [
    "pywsd",
    "spacy",
    "anls",
    "rouge",
    "capture_metric",
    "Levenshtein",
]
gemini = ["google-generativeai"]
qwen = ["qwen_vl_utils"]
mmsearch = [
    "playwright",
    "requests",
    "matplotlib",
    "duckduckgo_search",
    "langchain",
    "langchain-community",
    "beautifulsoup4",
    "FlagEmbedding",
    "rouge",
]
all = [
    "gemini",
    "metrics",
    "qwen",
    "mmsearch"
]
dev = ["black", "isort", "pre-commit"]

[tool.setuptools.packages.find]
include = ["lmms_eval*"]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
    "logs*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
    "logs*",
]

[project.scripts]
lmms-eval = "lmms_eval.__main__:cli_evaluate"

[project.urls]
Homepage = "https://lmms-lab.github.io"
Repository = "https://github.com/EvolvingLMMs-Lab/lmms-eval"
