[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[tomli]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lmms_eval"
version = "0.3.0"
authors = [
    { name = "LMMMs-Lab Evaluation Team", email = "lmms-lab@outlook.com" },
]
description = "A framework for evaluating large multi-modality language models"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "accelerate>=0.29.1",
    "datasets>=3,<4",
    "einops>=0,<1",
    "evaluate>=0,<1",
    "loguru>=0,<1",
    "nltk>=3,<4",
    "numpy>=2,<3",
    "openai>=1,<2",
    "peft>=0,<1",
    "pycocoevalcap>=1,<2",
    "pytablewriter>=1,<2",
    "qwen_vl_utils>=0,<1",
    "sacrebleu>=2,<3",
    "scikit-learn>=1,<2",
    "sentence_transformers>=3,<4",
    "sentencepiece>=0,<1",
    "sqlitedict>=2,<3",
    "tenacity>=9,<10",
    "torch>=2.1,<3",
    "torchvision>=0,<1",
    "transformers>=4,<5",
    "wandb>=0,<1",
]

[project.optional-dependencies]
convbench = ["anls"]
detailcaps = ["capture_metric"]
llava_interleaved_bench = ["rouge"]
mathvista = ["Levenshtein"]
mmsearch = [
    "beautifulsoup4",
    "duckduckgo_search",
    "FlagEmbedding",
    "langchain",
    "langchain-community",
    "matplotlib",
    "playwright",
    "rouge",
]
multidocvqa = ["Levenshtein"]
vcrwiki = ["spacy"]

all = ["convbench", "detailcaps", "llava_interleaved_bench", "mathvista", "mmsearch", "multidocvqa", "vcrwiki"]
dev = ["black", "isort", "pre-commit"]

[tool.setuptools.packages.find]
include = ["lmms_eval*"]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
    "logs*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
    "logs*",
]

[project.scripts]
lmms-eval = "lmms_eval.__main__:cli_evaluate"

[project.urls]
Homepage = "https://lmms-lab.github.io"
Repository = "https://github.com/EvolvingLMMs-Lab/lmms-eval"
